welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: value Abs is not a member of object Math
	def x = Math.Abs(10-a)
                     ^close10:3: error: value Abs is not a member of object Math
	def y = Math.Abs(10-b)
                     ^