welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	def x = Math.Abs(10-a)
	def y = Math.Abs(10-b)
	if (x==y){
		return 0
	} else if (x>y){
		return a
	} else {
		return b
	}
}
